--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' https://dummyjson.com; " > -->
-    <meta http-equiv="Content-Security-Policy" content="connect-src 'self' https://dummyjson.com http://localhost:8080;">
+    <meta http-equiv="Content-Security-Policy" content="connect-src 'self' https://dummyjson.com http://localhost:8080 https://picsum.photos;">
 
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *"> -->
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *;**script-src 'self' https://dummyjson.co 'unsafe-inline' 'unsafe-eval';** "> -->
@@ -44,7 +44,7 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
   </head>
-  <body>
+  <body class="index-page">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
